--- a/style.css
+++ b/style.css
@@ -31,4 +31,45 @@ main{
     text-align: center;
     margin: 0 auto;
     margin-button: 2rem;
+    
+}
+
+h1{
+    font-size: 2rem;
+    margin: 20px auto;
+}
+
+.button-container{
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+
+}
+
+.pomodoro {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    margin: 2.5rem 0; 
+    text-align: center;
+    border-radius: 50%;
+    background: linear-gradient(315deg, #252a45 0%, #181e2a 100%);
+    box-shadow: 20px 20px 42px #0e2021, -20px -20px 42px #1c2244;
+}
+.pomodoro::before {
+    content: "";
+    position: absolute;
+    width: 22rem;
+    height: 22rem;
+    border: 10px solid royalblue;
+    border-radius: 50%;
+    
+}
+
+.container .timer h1{
+    font-size: 3rem;
 }
