--- a/style.css
+++ b/style.css
@@ -70,6 +70,46 @@ h1{
     
 }
 
-.container .timer h1{
-    font-size: 3rem;
+
+
+.time {
+    font-size: 5rem !important;
+    margin: 20px auto;
+
+}
+
+.button-container  { 
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+
+}
+
+.button {
+    background-color: #2e325a;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    margin: 5px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+.button.active, .button:hover {
+    background-color: #020323;
+    
+}
+.hidden { 
+    display: block;
+
+}
+.timer-display{
+    font-size: 5rem;
+    margin-top: 20px;
+    font-weight: bold;
+}
+
+#buttons {
+    margin-top: 20px;
+    
 }
