--- a/style.css
+++ b/style.css
@@ -113,3 +113,45 @@ h1{
     margin-top: 20px;
     
 }
+
+#start, #stop {
+    background-color: #2e325a;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    margin: 10px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+#stop:hover {
+    background-color: red;
+
+}
+
+#start:hover {
+    background-color: #219a52;
+}
+
+#timer-message { 
+    color: white;
+    background-color: red;
+    display: none;
+    padding: 0.5rem;
+    font-size: 1rem;
+    text-align: center;
+    border-radius: 1rem;
+}
+
+/* resp */
+
+@media screen and (min-width: 320px) and (max-width: 600px) { 
+   .container { 
+    transform: scale(0.9);
+   }
+
+   .timer {
+    width: 500px;
+   }
+}
