--- a/style.css
+++ b/style.css
@@ -14,75 +14,70 @@ body {
 
 .container {
     text-align: center;
-    padding:10px 0;
-    width: 100vh;
+    width: 100%;
+    padding: 10px 0;
 }
+
 .timer {
     display: inline-block;
     padding: 10px;
-    width:600px;
+    width: 600px;
     box-sizing: border-box;
 }
 
-main{
+main {
     width: 25rem;
     height: 25rem;
     border-radius: 50%;
     text-align: center;
     margin: 0 auto;
-    margin-button: 2rem;
-    
+    margin-bottom: 2rem;
 }
 
-h1{
+h1 {
     font-size: 2rem;
     margin: 20px auto;
 }
 
-.button-container{
+.button-container {
     margin-top: 20px;
     display: flex;
     justify-content: center;
-
 }
 
 .pomodoro {
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+    align-items: center;
     width: 100%;
     height: 100%;
     position: relative;
-    margin: 2.5rem 0; 
+    margin: 2.5rem 0;
     text-align: center;
     border-radius: 50%;
-    background: linear-gradient(315deg, #252a45 0%, #181e2a 100%);
-    box-shadow: 20px 20px 42px #0e2021, -20px -20px 42px #1c2244;
+    background: #151932;
+    box-shadow: 20px 20px 42px #0e1021, -20px -20px 42px #1c2244;
 }
+
 .pomodoro::before {
     content: "";
     position: absolute;
-    width: 22rem;
-    height: 22rem;
     border: 10px solid royalblue;
     border-radius: 50%;
-    
+    width: 22rem;
+    height: 22rem;
 }
-
-
 
 .time {
     font-size: 5rem !important;
     margin: 20px auto;
-
 }
 
-.button-container  { 
+.button-container {
     margin-top: 20px;
     display: flex;
     justify-content: center;
-
 }
 
 .button {
@@ -93,25 +88,25 @@ h1{
     padding: 10px 20px;
     margin: 5px;
     cursor: pointer;
-    transition: all 0.3s ease;
+    transition: all .2s ease-in;
 }
+
 .button.active, .button:hover {
     background-color: #020323;
-    
 }
-.hidden { 
-    display: block;
 
+.hidden {
+    display: block;
 }
-.timer-display{
+
+.timer-display {
     font-size: 5rem;
     margin-top: 20px;
     font-weight: bold;
 }
 
-#buttons {
+.buttons {
     margin-top: 20px;
-    
 }
 
 #start, #stop {
@@ -122,49 +117,35 @@ h1{
     padding: 10px 20px;
     margin: 10px;
     cursor: pointer;
-    transition: all 0.3s ease;
+    transition: all .2s ease-in;
 }
 
 #stop:hover {
-    background-color: red;
-
+    background-color: tomato;
 }
 
 #start:hover {
     background-color: #219a52;
 }
 
-#timer-message { 
+#timer-message {
     color: white;
-    background-color: red;
+    background-color: tomato;
     display: none;
-    padding: 0.5rem;
+    padding: .5rem;
     font-size: 1rem;
     text-align: center;
     border-radius: 1rem;
 }
 
-/* resp */
+/* Responsiveness */
 
-@media screen and (min-width: 320px) and (max-width: 600px) { 
-   .container { 
-    transform: scale(0.9);
-   }
+@media screen and (min-width: 320px) and (max-width: 600px) {
+    .container {
+        transform: scale(0.9)
+    }
 
-   .timer {
-    width: 500px;
-   }
-}
-.time-input {
-    font-size: 3rem;
-    width: 4rem;
-    text-align: center;
-    border: none;
-    background: transparent;
-    color: #d7e0ff;
-}
-
-span {
-    font-size: 3rem;
-    color: #d7e0ff;
+    .timer {
+        width: 500px;
+    }
 }
